samples/_failures_safe/1761516664_22fa57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3dacee8d.c: In function ‘main’:
./samples/SAFE/__tmp_3dacee8d.c:154:13: error: expected expression at end of input
  154 |             case
      |             ^~~~
./samples/SAFE/__tmp_3dacee8d.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3dacee8d.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3dacee8d.c:154:13: error: expected declaration or statement at end of input
